infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: gustavocondezo/micro-comments

#Para agregar otro objecto de kubernets con triple guion (sino puede ser otro archivo)
#agregamos un despliegue de tipo servicio
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP #Si no se pone sera x defecto ClusterIP
  #ClusterIP PERMITE QUE SE CONECTEN ENTRE PODS
  #NodePort permite que el puerto este disponible fuera
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
