infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: gustavocondezo/micro-event-bus

#Para agregar otro objecto de kubernets con triple guion (sino puede ser otro archivo)
#agregamos un despliegue de tipo servicio
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP #Si no se pone sera x defecto ClusterIP
  #ClusterIP PERMITE QUE SE CONECTEN ENTRE PODS
  #NodePort permite que el puerto este disponible fuera
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
