infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: gustavocondezo/micro-moderation

#Para agregar otro objecto de kubernets con triple guion (sino puede ser otro archivo)
#agregamos un despliegue de tipo servicio
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP #Si no se pone sera x defecto ClusterIP
  #ClusterIP PERMITE QUE SE CONECTEN ENTRE PODS
  #NodePort permite que el puerto este disponible fuera
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
