infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: gustavocondezo/query

#Para agregar otro objecto de kubernets con triple guion (sino puede ser otro archivo)
#agregamos un despliegue de tipo servicio
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP #Si no se pone sera x defecto ClusterIP
  #ClusterIP PERMITE QUE SE CONECTEN ENTRE PODS
  #NodePort permite que el puerto este disponible fuera
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
